// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders in accordance with snapshot 1`] = `
"<div>
  <link rel=\\"stylesheet\\" href=\\"https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css\\" integrity=\\"sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3\\" crossorigin=\\"anonymous\\">
  <div class=\\"container py-5 h-100 card-style card\\"><img class=\\"card-img-top\\" src=\\"https://is1-ssl.mzstatic.com/image/thumb/Music128/v4/db/d5/86/dbd586f6-5c4b-e9f3-8ec6-4716adf881c8/source/100x100bb.jpg\\">
    <div class=\\"card-body\\">
      <div class=\\"card-title h5\\">Marry You (feat. Ne-Yo) - Single</div>
      <div class=\\"mb-2 text-muted card-subtitle h6\\">Diamond Platnumz</div>
      <p class=\\"card-text\\"></p>
      <div class=\\"buttons-wrapper\\"><button id=\\"favourite-button\\" type=\\"button\\" class=\\"edit-button btn btn-light\\">Add to favourites</button></div>
    </div>
  </div>
</div>"
`;

exports[`renders in accordance with snapshot 2`] = `
"<div>
  <link rel=\\"stylesheet\\" href=\\"https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css\\" integrity=\\"sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3\\" crossorigin=\\"anonymous\\">
  <div class=\\"container py-5 h-100 card-style card\\"><img class=\\"card-img-top\\" src=\\"https://is1-ssl.mzstatic.com/image/thumb/Music128/v4/db/d5/86/dbd586f6-5c4b-e9f3-8ec6-4716adf881c8/source/100x100bb.jpg\\">
    <div class=\\"card-body\\">
      <div class=\\"card-title h5\\">Marry You (feat. Ne-Yo) - Single</div>
      <div class=\\"mb-2 text-muted card-subtitle h6\\">Diamond Platnumz</div>
      <p class=\\"card-text\\"></p>
      <div class=\\"buttons-wrapper\\"><button type=\\"button\\" class=\\"delete-button btn btn-light\\">Remove</button></div>
    </div>
  </div>
</div>"
`;
